Simplified project structure Fixed z-index of the editor

--- a/notetaker-frontend/src/styles.sass
+++ b/notetaker-frontend/src/styles.sass
@@ -23,4 +23,5 @@ $navbar-height: 60px
 .ck.ck-content ul
   padding-left: 40px
 
-
+body
+  --ck-z-modal: 0
